# src/main/resources/swagger.yaml
@@ -4,7 +4,7 @@ info:
   version: "1.0.0"
   title: "Mineseeper by charle"
 host: "totem.to.be.defined.com"
-basePath: "/v1"
+basePath: "/v2"
 tags:
   - name: "game"
     description: "An activity to find all the hidden mines"
@@ -15,7 +15,7 @@ schemes:
   - "https"
   - "http"
 paths:
-  /games:
+  /accounts/{accountId}/games:
     post:
       tags:
         - "game"
@@ -26,6 +26,11 @@ paths:
       produces:
         - "application/json"
       parameters:
+        - name: "accountId"
+          in: "path"
+          description: "ID of user account who is playing. It is a string of 1 to 16 letters and or digits"
+          required: true
+          type: "string"
         - in: "body"
           name: "body"
           description: "The dimensions of the board"
@@ -44,6 +49,12 @@ paths:
         - "game"
       summary: "List existent games by ID"
       description: "Returns the list of games"
+      parameters:
+        - name: "accountId"
+          in: "path"
+          description: "ID of user account who is playing. It is a string of 1 to 16 letters and or digits"
+          required: true
+          type: "string"
       produces:
         - "application/json"
       responses:
@@ -54,7 +65,7 @@ paths:
         "404":
           description: "No game with such id"
 
-  /games/{gameId}:
+  /accounts/{accountId}/games/{gameId}:
     get:
       tags:
         - "game"
@@ -63,6 +74,11 @@ paths:
       produces:
         - "application/json"
       parameters:
+        - name: "accountId"
+          in: "path"
+          description: "ID of user account who is playing. It is a string of 1 to 16 letters and or digits"
+          required: true
+          type: "string"
         - name: "gameId"
           in: "path"
           description: "ID of game to return"
@@ -76,7 +92,7 @@ paths:
         "404":
           description: "No game with such id"
 
-  /games/{gameId}/flags:
+  /accounts/{accountId}/games/{gameId}/flags:
     post:
       tags:
         - "game"
@@ -87,6 +103,11 @@ paths:
       produces:
         - "application/json"
       parameters:
+        - name: "accountId"
+          in: "path"
+          description: "ID of user account who is playing. It is a string of 1 to 16 letters and or digits"
+          required: true
+          type: "string"
         - name: "gameId"
           in: "path"
           description: "ID of game that needs to be updated"
@@ -108,7 +129,7 @@ paths:
         "404":
           description: "No game with such id"
 
-  /games/{gameId}/uncovers:
+  /accounts/{accountId}/games/{gameId}/uncovers:
     post:
       tags:
         - "game"
@@ -119,6 +140,11 @@ paths:
       produces:
         - "application/json"
       parameters:
+        - name: "accountId"
+          in: "path"
+          description: "ID of user account who is playing. It is a string of 1 to 16 letters and or digits"
+          required: true
+          type: "string"
         - name: "gameId"
           in: "path"
           description: "ID of game that needs to be updated"
